tests/assembler/fail/test7.ial
type Test7
{
    field int32 missingStorageSpecifier;
}
